# lclva

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  build.sh  compose.yaml  lclva.db  run_integration_tests.sh  run_tests.sh
cmake/: Dependencies.cmake  Warnings.cmake
config/: default.yaml
docs/: aec_report.md  troubleshooting.md
packaging/compose/: docker-compose.yml  fetch-assets.sh
packaging/compose/piper/: Dockerfile
packaging/compose/whisper/: Dockerfile
packaging/systemd/: README.md  acva-llama.service  acva-piper.service  acva-whisper.service  acva.service  acva.target  lclva-llama.service  lclva-piper.service  lclva-whisper.service  lclva.service  lclva.target
plans/: architecture_review.md  cpp_vs_rust_analysis.md  local_voice_ai_orchestrator_mvp_cpp_architecture_2026.md  open_questions.md  project_design.md  web_ui_architecture.md
plans/diagrams/: 01_components_tree.dot  02_modules_dependency.dot  03_composition.dot  04_data_flow.dot  05_infra.dot  06_business_logic.dot  07_task_dependencies.dot
plans/milestones/: README.md  m0_skeleton.md  m10_conversational_ux.md  m1_llm_memory.md  m2_supervision.md  m3_tts_playback.md  m4_audio_vad.md  m4b_speaches_consolidation.md  m5_streaming_stt.md  m6_aec.md  m6b_aec_hardware.md  m7_barge_in.md  m8_hardening.md  m8a_admin_state.md  m8b_observability.md  m8c_distribution.md  m9_speculation.md
scripts/: aec_analyze.py  barge-in-probe.py  build-times.sh  download-assets.sh  download-backend-assets.sh  download-llm-models.sh  download-llm.sh  download-speaches-models.sh  download-stt.sh  download-tts.sh  download-vad.sh  m7-bargein-bench.py  soak-vad-falsestarts.sh
src/: CMakeLists.txt  main.cpp
src/audio/: apm.cpp  apm.hpp  capture.cpp  capture.hpp  clock.cpp  clock.hpp  endpointer.cpp  endpointer.hpp  frame.hpp  half_duplex_gate.hpp  loopback.cpp  loopback.hpp  pipeline.cpp  pipeline.hpp  resampler.cpp  resampler.hpp  spsc_ring.hpp  utterance.cpp  utterance.hpp  vad.cpp  vad.hpp  wav.cpp  wav.hpp
src/cli/: args.cpp  args.hpp
src/config/: config.cpp  config.hpp  paths.cpp  paths.hpp
src/demos/: aec.cpp  aec_hw.cpp  aec_record.cpp  bargein.cpp  capture.cpp  chat.cpp  demo.cpp  demo.hpp  fsm.cpp  health.cpp  llm.cpp  loopback.cpp  soak.cpp  stt.cpp  tone.cpp  transcribe.cpp  tts.cpp  wedge.cpp
src/dialogue/: barge_in.cpp  barge_in.hpp  fsm.cpp  fsm.hpp  manager.cpp  manager.hpp  sentence_splitter.cpp  sentence_splitter.hpp  tts_bridge.cpp  tts_bridge.hpp  turn.cpp  turn.hpp  turn_writer.cpp  turn_writer.hpp
src/event/: bus.cpp  bus.hpp  event.cpp  event.hpp  queue.hpp
src/http/: server.cpp  server.hpp
src/llm/: client.cpp  client.hpp  prompt_builder.cpp  prompt_builder.hpp  sse_parser.cpp  sse_parser.hpp
src/log/: json_sink.cpp  json_sink.hpp  log.cpp  log.hpp
src/memory/: db.cpp  db.hpp  memory_thread.cpp  memory_thread.hpp  recovery.cpp  recovery.hpp  repository.cpp  repository.hpp  schema.hpp  summarizer.cpp  summarizer.hpp
src/metrics/: registry.cpp  registry.hpp
src/orchestrator/: bootstrap.cpp  bootstrap.hpp  capture_stack.cpp  capture_stack.hpp  dialogue_stack.cpp  dialogue_stack.hpp  event_tracer.cpp  event_tracer.hpp  status_extra.cpp  status_extra.hpp  stt_stack.cpp  stt_stack.hpp  supervisor_setup.cpp  supervisor_setup.hpp  system_aec.cpp  system_aec.hpp  tts_stack.cpp  tts_stack.hpp
src/pipeline/: fake_driver.cpp  fake_driver.hpp
src/playback/: engine.cpp  engine.hpp  queue.cpp  queue.hpp
src/stt/: openai_stt_client.cpp  openai_stt_client.hpp  realtime_envelope.cpp  realtime_envelope.hpp  realtime_event_dispatch.cpp  realtime_event_dispatch.hpp  realtime_stt_client.cpp  realtime_stt_client.hpp
src/supervisor/: keep_alive.cpp  keep_alive.hpp  probe.cpp  probe.hpp  service.cpp  service.hpp  supervisor.cpp  supervisor.hpp
src/tts/: openai_tts_client.cpp  openai_tts_client.hpp  piper_client.cpp  piper_client.hpp  types.hpp
tests/: CMakeLists.txt  test_apm.cpp  test_audio_pipeline.cpp  test_barge_in.cpp  test_bus.cpp  test_config.cpp  test_db.cpp  test_endpointer.cpp  test_fsm.cpp  test_half_duplex_gate.cpp  test_json_sink.cpp  test_keep_alive.cpp  test_llm_client.cpp  test_loopback.cpp  test_manager.cpp  test_memory_thread.cpp  test_paths.cpp  test_personality.cpp  test_piper_client.cpp  test_playback_engine.cpp  test_playback_queue.cpp  test_probe.cpp  test_prompt_builder.cpp  test_queue.cpp  test_realtime_envelope.cpp  test_realtime_event_dispatch.cpp  test_recovery.cpp  test_repository.cpp  test_resampler.cpp  test_sentence_splitter.cpp  test_service_monitor.cpp  test_speaches_realtime_smoke.cpp  test_speaches_smoke.cpp  test_speaches_wedge.cpp  test_spsc_ring.cpp  test_sse_parser.cpp  test_summarizer.cpp  test_supervisor.cpp  test_system_aec.cpp  test_tts_bridge.cpp  (+3 more)
tools/: acva-models
